--- a/reduxapp/src/index.css
+++ b/reduxapp/src/index.css
@@ -7,7 +7,9 @@ background:#f4f4ef;
 
 
 .center {
-text-align: center;
+font-size: 24px;
+font-weight: bold;
+font-family: sans-serif;
 }
 a {
 color:#636363;
@@ -26,15 +28,21 @@ text-decoration: underline;
 
 .navbar {
 background:#fff;
-text-align:center;
-padding:1.5rem 0;
-width:100%;
-display:flex;
-justify-content: center;
-align-items: center;
+margin: auto;
+padding:50px;
+width:50%;
+margin-bottom: 10px;
+
 box-shadow:0 5px 15px 0 rgba(46, 61, 73, 0.12);
 }
 
+.navbar li {
+  display: inline-block;
+  text-align: center;
+  width: auto;
+  margin: 10px;
+  text-decoration: underline;
+}
 
 .navbar h2 {
 margin:0;
@@ -50,7 +58,7 @@ font-family:'Work Sans',sans-serif;
 background:#fff;
 padding:50px;
 width:50%;
-margin:40px auto;
+margin:20px auto;
 box-shadow:0 5px 15px 0 rgba(46, 61, 73, 0.12);
 font-family:'Work Sans',sans-serif;
 }
@@ -116,9 +124,9 @@ word-wrap: break-word;
 
 .post {
 background:#fff;
-width:60%;
+width:50%;
 margin:0 auto;
-padding:30px;
+padding:50px;
 margin-bottom:20px;
 box-shadow: 10px 10px 12px 0 rgba(46, 60, 73, 0.05);
 }
@@ -183,4 +191,15 @@ cursor:pointer;
 margin-right:auto;
 outline: none;
 color:#fff;
+}
+
+.login {
+  background:#02b3e4;;
+  border:none;
+  text-align: center;
+  font-size:20px;
+  border-radius:20px;
+  cursor:pointer;
+  outline: none;
+  color:#fff;
 }
